#37 Agregar referencias de bibliografia

--- a/book/book.bib
+++ b/book/book.bib
@@ -8,3 +8,17 @@
   note = {ISBN 978-1498716963},
   url = {http://yihui.name/knitr/},
 }
+
+@ARTICLE{raschka,
+  author = {Sebastian Raschka},
+  title = {Model Evaluation, Model Selection, and Algorithm Selection in Machine Learning},
+  journal = {arXiv:1811.12808v1 [cs.LG]},
+  year = {2018}
+}
+
+@book{hastie,
+  title={The elements of statistical learning: data mining, inference, and prediction},
+  author={Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome},
+  year={2009},
+  publisher={Springer Science \& Business Media}
+}
